card spacing issue fixed

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+  background-image: url("images/03f5d5104bf86086518b6ce15f28970b5b3d58d6.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .custom-inset-shadow {
   box-shadow:
     0px 3px 4px 0px #a8a2ff40 inset,
@@ -7,3 +15,7 @@
     0px -3px 4px 0px #857cff66 inset,
     0px 3px 4px 0px #857cff66 inset;
 }
+/* .custom-color-transition{
+                        bg-[linear-gradient(0deg,rgba(255,255,255,0.01),rgba(255,255,255,0.01)),linear-gradient(180deg,rgba(133,124,255,0.3)_0%,rgba(80,74,153,0)_32.45%),linear-gradient(114.89deg,rgba(133,124,255,0.3)_3.24%,rgba(80,74,153,0)_27.34%),linear-gradient(286.96deg,rgba(133,124,255,0.3)_1.21%,rgba(80,74,153,0)_20.66%)]">
+
+} */
